# Sniffle

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.md  changelog.md
src/: config.cpp  config.h  file_filters.cpp  file_filters.h  file_finders.cpp  file_finders.h  file_grepper.cpp  file_grepper.h  file_helpers.cpp  file_helpers.h  filename_matchers.cpp  filename_matchers.h  main.cpp  pattern.h  pattern_matchers.cpp  pattern_matchers.h  sniffle.cpp  sniffle.h  string_buffer.h  string_helpers.cpp  string_helpers.h  system_helpers.cpp  system_helpers.h
src/tests/: tests.h
src/utils/: file_helpers.cpp  file_helpers.h  string_buffer.h  string_helpers.cpp  string_helpers.h  threaded_task_pool.cpp  threaded_task_pool.h
wip/sniffle-rs/: .gitignore  Cargo.toml  README.md
wip/sniffle-rs/src/: main.rs
